# vgg_android

./: .gitignore  LICENSE  README.md
VggExample/demo/: build.gradle.kts
VggExample/demo/src/main/: AndroidManifest.xml
VggExample/demo/src/main/java/com/example/verygoodgraphics/android/demo/: MainApplication.java  Utils.java  VggDemoDelegate.java  VggDemos.java
VggExample/demo/src/main/java/com/example/verygoodgraphics/android/demo/activity/: VggDemoSelectActivity.java  VggDemoViewActivity.java  VggXmlDemoActivity.kt
VggExample/demo/src/main/java/com/example/verygoodgraphics/android/demo/impl/: VggCounter.kt  (+2 more)
VggExample/demo/src/main/res/layout/: activity_vgg_demo_select.xml  activity_vgg_xml_demo.xml
VggExample/demo/src/main/res/raw/: counter_with_js.daruma  counter_without_js.daruma  vgg.daruma
VggRuntime/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
VggRuntime/container/: build.gradle.kts
VggRuntime/container/src/main/cpp/: CMakeLists.txt  VggContainer.cc  VggContainer.h  VggEventAdapter.cc  VggEventAdapter.h  VggRuntime.cc  VggRuntime.h  VggView.cc
VggRuntime/container/src/main/java/com/verygoodgraphics/android/container/: main.kt
VggRuntime/container/src/main/java/com/verygoodgraphics/android/container/data/: VggEvent.kt
VggRuntime/container/src/main/java/com/verygoodgraphics/android/container/listener/: VggEventListener.kt
VggRuntime/container/src/main/java/com/verygoodgraphics/android/container/view/: VggView.kt
VggRuntime/container/src/main/res/values/: attrs.xml
VggRuntime/gradle/: libs.versions.toml
